Начал делать слайдер

--- a/demo/demo.pug
+++ b/demo/demo.pug
@@ -39,7 +39,7 @@ html(lang="en")
             input.control-panel__direction(type="radio" name="direction-one")
             span Вертикальный
           label.control-panel__label(for="") 
-            input.control-panel__direction(type="radio" name="direction-one")
+            input.control-panel__direction(type="radio" name="direction-one" checked)
             span Горизонтальный
 
 
