--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,3 +10,11 @@
   position: absolute;
   top: -5px;
 }
+.scale {
+  width: 100px;
+}
+.scale__line {
+  background: coral;
+  height: 5px;
+  width: 1px;
+}
