написал слайдер функциями начал разбивать на классы, продумывая архитектуру. Застрял на type script. буду читать документацию

--- a/demo/demo.pug
+++ b/demo/demo.pug
@@ -8,7 +8,8 @@ html(lang="en")
     link(rel="stylesheet", href="../demo/demo.css")
   body
     .demo__single-slider
-      #range-slider
+      .demo__slider
+        #range-slider
       .control-panel
         .control-panel__wrapper
           label.control-panel__label(for="") 
@@ -41,5 +42,6 @@ html(lang="en")
           label.control-panel__label(for="") 
             input.control-panel__direction(type="radio" name="direction-one" checked)
             span Горизонтальный
+  script(src="../demo/demo.js")
 
 
